--- a/workflow-templates/new-PR-comment.yml
+++ b/workflow-templates/new-PR-comment.yml
@@ -1,8 +1,7 @@
-name: "New Pull Request"
+name: "New Pull Request - Comment"
 
 on:
-  pull_request:
-    types: [opened, reopened, ready_for_review]
+  workflow_call:
 
 permissions:
   pull-requests: write
@@ -12,7 +11,7 @@ jobs:
   leave_comment:
     runs-on: ubuntu-latest
     steps:
-      - name: Leave a comment
+      - name: Post Comment
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
