--- a/.github/workflows/trigger-new-PR.yml
+++ b/.github/workflows/trigger-new-PR.yml
@@ -1,11 +1,12 @@
 name: "New Pull Request"
+
 on:
   pull_request:
     types: [opened, reopened, ready_for_review]
 
 jobs:
   use-comment:
-    uses: SessionsBot/.github/workflows/reuseable-PR-Comment.yml@main
+    uses: SessionsBot/.github/.github/workflows/reuseable-PR-Comment.yml@main
     permissions:
       pull-requests: write
       issues: write
