--- a/.github/workflows/reuseable-PR-Comment.yml
+++ b/.github/workflows/reuseable-PR-Comment.yml
@@ -20,5 +20,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "👋 Thanks for the Pull Request! One of our reviewers will check this out ASAP."
+              body: "👋 Thanks for the Pull Request! One of our code reviewers will check this out ASAP."
             })
