--- a/.github/workflows/reuseable-PR-Comment.yml
+++ b/.github/workflows/reuseable-PR-Comment.yml
@@ -8,7 +8,7 @@ permissions:
   issues: write
 
 jobs:
-  leave_comment:
+  reusable-comment:
     runs-on: ubuntu-latest
     steps:
       - name: Post Comment
