--- a/.github/workflows/trigger-new-PR.yml
+++ b/.github/workflows/trigger-new-PR.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, reopened, ready_for_review]
 
 jobs:
-  use-comment:
+  post-comment:
     uses: SessionsBot/.github/.github/workflows/reuseable-PR-Comment.yml@main
     permissions:
       pull-requests: write
