--- a/.github/workflows/reuseable-PR-Comment.yml
+++ b/.github/workflows/reuseable-PR-Comment.yml
@@ -1,4 +1,4 @@
-name: "New Pull Request - Comment"
+name: "New Pull Request - Actions"
 
 on:
   workflow_call:
@@ -20,5 +20,15 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "👋 Thanks for the Pull Request! One of our code reviewers will check this out ASAP."
+              body: "👋 Thanks for the Pull Request! One of our code reviewers will check this out as soon as possible."
+            })
+      - name: Add Triage Label
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['Needs Review']
             })
