--- a/.github/workflows/new-PR-triage.yml
+++ b/.github/workflows/new-PR-triage.yml
@@ -47,3 +47,39 @@ jobs:
               color: 'ff69b4',
               description: 'In need of review by a code admin'
             })
+      # Check for Outside Contributors:
+      - name: Check Org Membership
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const org = 'SessionsBot';
+            const username = context.payload.pull_request.user.login;
+
+            try {
+              await github.rest.orgs.checkMembershipForUser({
+                org,
+                username
+              });
+              console.log(`${username} is a member of ${org}!`);
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: ['Organization Contributor']
+              });
+            } catch (error) {
+            // Check for Non-Member:
+            if (error.status === 404) {
+              console.log(`${username} is NOT a member of ${org}`);
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: ['Outside Contributor']
+              });
+            } else {
+              // Let the workflow fail if it's a different error
+              throw error; 
+            }
+            
+            }
