~ Update file path for workflow action

--- a/.github/workflows/sync-all-labels.yml
+++ b/.github/workflows/sync-all-labels.yml
@@ -29,7 +29,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const path = require('path');
-            const syncLabels = require('././scripts/sync-labels.js');
+            const syncLabels = require('config-repo/.github/scripts/sync-labels.js');
             const deleteUnmatched = '${{ github.event.inputs.deleteUnmatched }}' === 'true';
             await syncLabels({ github, context, core }, deleteUnmatched);
 
