--- a/.github/workflows/sync-all-labels.yml
+++ b/.github/workflows/sync-all-labels.yml
@@ -21,14 +21,14 @@ jobs:
         with:
           repository: SessionsBot/.github
           ref: main
-          path: config-repo
+          path: configRepo
 
       - name: Sync labels - Config file
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const syncLabels = require('./' + config-repo + '/.github/scripts/sync-labels.js');
+            const syncLabels = require('./' + configRepo + '/.github/scripts/sync-labels.js');
             const deleteUnmatched = '${{ github.event.inputs.deleteUnmatched }}' === 'true';
             await syncLabels({ github, context, core }, deleteUnmatched);
 
