--- a/.github/workflows/new-auto-triage.yml
+++ b/.github/workflows/new-auto-triage.yml
@@ -12,7 +12,7 @@ jobs:
   TRIAGE-START:
     runs-on: ubuntu-latest
     steps:
-      # STEP 1: Check if PR author is a member of the org
+      # STEP 1: Check if contributing author is a member of the organization & adds triage labels
       - name: Check Org Membership
         id: check-membership
         uses: actions/github-script@v7
@@ -24,6 +24,7 @@ jobs:
             let username;
             let issue_number;
 
+            // Check for event trigger type:
             if (context.payload.pull_request) {
               username = context.payload.pull_request.user.login;
               issue_number = context.payload.pull_request.number;
@@ -34,6 +35,7 @@ jobs:
               throw new Error("This workflow only supports issues or pull requests.");
             }
 
+            // Check for organization memebership:
             let isMember = false;
 
             try {
@@ -51,8 +53,10 @@ jobs:
               }
             }
 
+            // Define organization memebership variable:
             core.setOutput('is_member', isMember);
 
+            // Add triage labels:
             await github.rest.issues.addLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -61,9 +65,9 @@ jobs:
             });
 
 
-      # STEP 2: Only post comment if it's an outside contributor (optional)
+      # STEP 2: Only post comment if it's an outside contributor
       - name: Post Thanks Comment
-        if: steps.check-membership.outputs.is_member == 'false' && github.event_name == 'pull_request'
+        if: steps.check-membership.outputs.is_member == 'false'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -72,6 +76,6 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "👋 Thanks for the Pull Request! One of our code reviewers will check this out as soon as possible."
+              body: "👋 Thanks for your Contribution! One of our code reviewers will check this out as soon as possible."
             })
 
