--- a/.github/workflows/sync-all-labels.yml
+++ b/.github/workflows/sync-all-labels.yml
@@ -31,9 +31,9 @@ jobs:
             const deleteUnmatched = '${{ github.event.inputs.deleteUnmatched }}' === 'true';
             await syncLabels({ github, context, core }, deleteUnmatched);
 
-      - name: Sync labels - Config file
+      - name: Sync labels - Completion
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            console.log('✅ Yay! This job has completed successfully!')
+            console.log('✅ Success! This job has completed successfully!')
